[gd_scene load_steps=30 format=3 uid="uid://belrt22bgvl0v"]

[ext_resource type="Script" path="res://levelEasy.gd" id="1_5ulic"]
[ext_resource type="Texture2D" uid="uid://lftx7crj2cwn" path="res://sprites/Untitled102_20240508084044.png" id="1_uxpwl"]
[ext_resource type="FontFile" uid="uid://cxo00kjcsmt7t" path="res://addons/fonts/BalooBhaijaan-Regular.ttf" id="3_cowe8"]
[ext_resource type="FontFile" uid="uid://ba8tt4gxqogjq" path="res://addons/fonts/FrancoisOne.ttf" id="4_4ceru"]
[ext_resource type="FontFile" uid="uid://x07w57hnrhsp" path="res://addons/fonts/PL Benguiat Caslon/PL Benguiat Caslon.ttf" id="5_vme0f"]
[ext_resource type="FontFile" uid="uid://cnff5mjjigvl" path="res://addons/fonts/PoiretOne-Regular.ttf" id="6_kibtb"]
[ext_resource type="PackedScene" uid="uid://brvhmdiaxfp52" path="res://loading.tscn" id="7_imgf3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nkoxb"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v75c8"]
bg_color = Color(2.69532e-06, 0.723539, 0.2568, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhabr"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vf6bq"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rjuox"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uc3p6"]
bg_color = Color(0, 0, 0, 1)
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_egsh8"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8xiqa"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.505882, 0.427451, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2dtod"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h3b2w"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_41dle"]
bg_color = Color(0.254902, 0.254902, 0.254902, 0.713726)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7bwq"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6aajm"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ei5h7"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.505882, 0.427451, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_syaxq"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_px1nt"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08dfe"]
bg_color = Color(0.254902, 0.254902, 0.254902, 0.713726)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vetpp"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20n4w"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13p31"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.505882, 0.427451, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yguye"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2jnh1"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="EASYControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ulic")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_uxpwl")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="TextureRect"]
layout_mode = 0
offset_left = 148.0
offset_top = 85.0
offset_right = 2415.0
offset_bottom = 133.0
theme_override_styles/background = SubResource("StyleBoxFlat_nkoxb")
theme_override_styles/fill = SubResource("StyleBoxFlat_v75c8")
max_value = 10.0
rounded = true
show_percentage = false

[node name="answerInput" type="LineEdit" parent="TextureRect"]
layout_mode = 0
offset_left = 177.0
offset_top = 745.0
offset_right = 2366.0
offset_bottom = 1077.0
theme_override_fonts/font = ExtResource("3_cowe8")
theme_override_font_sizes/font_size = 200
theme_override_styles/normal = SubResource("StyleBoxFlat_nhabr")
theme_override_styles/focus = SubResource("StyleBoxFlat_vf6bq")
theme_override_styles/read_only = SubResource("StyleBoxFlat_rjuox")
alignment = 1
max_length = 50

[node name="question" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 3.0
offset_top = 303.0
offset_right = 2546.0
offset_bottom = 609.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_cowe8")
theme_override_font_sizes/font_size = 200
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="answer" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 203.0
offset_top = 1129.0
offset_right = 2333.0
offset_bottom = 1227.0
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("4_4ceru")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_uc3p6")
theme_override_styles/hover = SubResource("StyleBoxFlat_egsh8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8xiqa")
theme_override_styles/disabled = SubResource("StyleBoxFlat_2dtod")
theme_override_styles/focus = SubResource("StyleBoxFlat_h3b2w")
text = "ANSWER"

[node name="GameOverScreen" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_41dle")

[node name="CenterContainer" type="CenterContainer" parent="GameOverScreen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_vme0f")
theme_override_font_sizes/font_size = 120
text = "Game Over"

[node name="RestartButton" type="Button" parent="GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("4_4ceru")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_q7bwq")
theme_override_styles/hover = SubResource("StyleBoxFlat_6aajm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ei5h7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_syaxq")
theme_override_styles/focus = SubResource("StyleBoxFlat_px1nt")
text = "Restart"

[node name="Map" type="Button" parent="GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("4_4ceru")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_q7bwq")
theme_override_styles/hover = SubResource("StyleBoxFlat_6aajm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ei5h7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_syaxq")
theme_override_styles/focus = SubResource("StyleBoxFlat_px1nt")
text = "Back to Map"

[node name="Paused" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -24.0
offset_right = 27.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_08dfe")

[node name="CenterContainer" type="CenterContainer" parent="Paused"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Paused/CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 11

[node name="Label" type="Label" parent="Paused/CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_kibtb")
theme_override_font_sizes/font_size = 120
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Paused/CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("4_4ceru")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_vetpp")
theme_override_styles/hover = SubResource("StyleBoxFlat_20n4w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_13p31")
theme_override_styles/disabled = SubResource("StyleBoxFlat_yguye")
theme_override_styles/focus = SubResource("StyleBoxFlat_2jnh1")
text = "Resume"

[node name="Restart" type="Button" parent="Paused/CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("4_4ceru")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_vetpp")
theme_override_styles/hover = SubResource("StyleBoxFlat_20n4w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_13p31")
theme_override_styles/disabled = SubResource("StyleBoxFlat_yguye")
theme_override_styles/focus = SubResource("StyleBoxFlat_2jnh1")
text = "Restart"

[node name="Map" type="Button" parent="Paused/CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("4_4ceru")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_vetpp")
theme_override_styles/hover = SubResource("StyleBoxFlat_20n4w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_13p31")
theme_override_styles/disabled = SubResource("StyleBoxFlat_yguye")
theme_override_styles/focus = SubResource("StyleBoxFlat_2jnh1")
text = "QUIT"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="startGame" type="PanelContainer" parent="CanvasLayer2"]
offset_right = 2582.0
offset_bottom = 1285.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer2/startGame"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/startGame/CenterContainer"]
layout_mode = 2

[node name="level1" type="Label" parent="CanvasLayer2/startGame/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cowe8")
theme_override_font_sizes/font_size = 80
text = "Game Challenge:
A MATCHY PROBLEM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="start" type="Button" parent="CanvasLayer2/startGame/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("4_4ceru")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_uc3p6")
theme_override_styles/hover = SubResource("StyleBoxFlat_egsh8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8xiqa")
theme_override_styles/disabled = SubResource("StyleBoxFlat_2dtod")
theme_override_styles/focus = SubResource("StyleBoxFlat_h3b2w")
text = "Start Game"

[node name="loading" parent="CanvasLayer2" instance=ExtResource("7_imgf3")]
visible = false

[node name="congrats" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_41dle")

[node name="CenterContainer" type="CenterContainer" parent="congrats"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="congrats/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 21

[node name="Label" type="Label" parent="congrats/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_vme0f")
theme_override_font_sizes/font_size = 120
text = "Congratulations"

[node name="Label2" type="Label" parent="congrats/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "You completed the game!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="congrats/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("4_4ceru")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_q7bwq")
theme_override_styles/hover = SubResource("StyleBoxFlat_6aajm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ei5h7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_syaxq")
theme_override_styles/focus = SubResource("StyleBoxFlat_px1nt")
text = "Restart"

[node name="Map" type="Button" parent="congrats/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.505882, 0.427451, 1, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("4_4ceru")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_q7bwq")
theme_override_styles/hover = SubResource("StyleBoxFlat_6aajm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ei5h7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_syaxq")
theme_override_styles/focus = SubResource("StyleBoxFlat_px1nt")
text = "Back to Map"

[connection signal="pressed" from="TextureRect/answer" to="." method="_on_answer_pressed"]
[connection signal="pressed" from="GameOverScreen/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverScreen/CenterContainer/VBoxContainer/Map" to="." method="_on_map_pressed"]
[connection signal="pressed" from="CanvasLayer2/startGame/CenterContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="congrats/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="congrats/CenterContainer/VBoxContainer/Map" to="." method="_on_map_pressed"]
